2009-04-11  Richard Guenther  <rguenther@suse.de>

PR tree-optimization/39713
	* tree-ssa-sccvn.c (vn_get_expr_for): Make sure built
	reference trees have SSA_NAME operands.

	* g++.dg/torture/pr39713.C: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@145951 138bc75d-0d04-0410-961f-82ee72b054a4